--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/saleel97/react-native-super-grid.git"
+    "url": "https://github.com/DigitalVibes/react-native-super-grid.git"
   },
   "peerDependencies": {
     "react-native": ">=0.43.0"
   },
-  "homepage": "https://github.com/saleel97/react-native-super-grid",
+  "homepage": "https://github.com/DigitalVibes/react-native-super-grid",
   "keywords": [
     "react",
     "native",
@@ -22,7 +22,7 @@
     "grid",
     "view"
   ],
-  "author": "Saleel",
+  "author": "Dvibes",
   "license": "MIT",
   "devDependencies": {
     "eslint": "^3.19.0",
